[package]
name = "routeguide-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "routeguide-server"
path = "src/server.rs"

[dependencies]
async-stream = "0.2"
futures-core = "0.3"
prost = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = "*"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "*"
